--- a/templates/base.html
+++ b/templates/base.html
@@ -16,9 +16,15 @@
     </title>
   </head>
   <body>
+    <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-primary bg-primary py-1">
-      <a class="navbar-brand"
-         href="#">Navbar</a>
+      {% if g.user.id %}
+        <a class="navbar-brand"
+           href="/users/{{ g.user.id }}">STOCKSIM</a>
+      {% else %}
+        <a class="navbar-brand"
+           href="/">STOCKSIM</a>
+      {% endif %}
       <button class="navbar-toggler"
               type="button"
               data-toggle="collapse"
@@ -33,42 +39,55 @@
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
             <a class="nav-link"
-               href="#">Home <span class="sr-only">(current)</span></a>
+               href="/trades/new">Trade <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link"
+               href="#">Watchlists <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link"
-               href="#">Link</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle"
-               href="#"
-               id="navbarDropdown"
-               role="button"
-               data-toggle="dropdown"
-               aria-haspopup="true"
-               aria-expanded="false">
-              Dropdown
-            </a>
-            <div class="dropdown-menu"
-                 aria-labelledby="navbarDropdown">
-              <a class="dropdown-item"
-                 href="#">Action</a>
-              <a class="dropdown-item"
-                 href="#">Another action</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item"
-                 href="#">Something else here</a>
-            </div>
+               href="#">History</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled"
-               href="#"
-               tabindex="-1"
-               aria-disabled="true">Disabled</a>
+            <a class="nav-link"
+               href="#">Settings</a>
           </li>
         </ul>
       </div>
+      <ul class="nav navbar-nav navbar-right">
+        {% if g.user == None %}
+          <li class="nav-item">
+            <a class="nav-link"
+               href="/auth/signup">Signup</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link"
+               href="/auth/login">Login</a>
+          </li>
+        {% else %}
+          <li class="nav-item">
+            <a class="nav-link"
+               href="/auth/logout">Logout</a>
+          </li>
+        {% endif %}
+      </ul>
     </nav>
+    <!-- Flash Messages -->
+    <div class="container mt-2">
+      {% for category, message in get_flashed_messages(with_categories=True) %}
+        <div role="alert"
+             class="alert alert-{{ category }} alert-dismissible fade show">
+          {{ message }}
+          <button type="button"
+                  class="close"
+                  data-dismiss="alert"
+                  aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+      {% endfor %}
+    </div>
 
     {% block content %}
     {% endblock content %}
@@ -82,5 +101,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"
             integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
             crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"></script>
+    <script src="/static/js/app.js"></script>
   </body>
 </html>
