--- a/templates/base.html
+++ b/templates/base.html
@@ -39,19 +39,15 @@
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
             <a class="nav-link"
-               href="/trades/new">Trade <span class="sr-only">(current)</span></a>
+               href="/trades/new">New Trade <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link"
+               href="#">Trading History</a>
           </li>
           <li class="nav-item active">
             <a class="nav-link"
                href="#">Watchlists <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link"
-               href="#">History</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link"
-               href="#">Settings</a>
           </li>
         </ul>
       </div>
@@ -66,9 +62,26 @@
                href="/auth/login">Login</a>
           </li>
         {% else %}
-          <li class="nav-item">
-            <a class="nav-link"
-               href="/auth/logout">Logout</a>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle"
+               href="#"
+               id="navbarDropdownMenuLink"
+               data-toggle="dropdown"
+               aria-haspopup="true"
+               aria-expanded="false">
+              {{ g.user.username }}
+            </a>
+            <div class="dropdown-menu dropdown-menu-right text-right"
+                 aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item"
+                 href="/users/{{ g.user.id }}/profile">User Profile</a>
+              <a class="dropdown-item"
+                 href="#">Change Password</a>
+              <a class="dropdown-item"
+                 href="#">Account Settings</a>
+              <a class="dropdown-item"
+                 href="/auth/logout">Logout</a>
+            </div>
           </li>
         {% endif %}
       </ul>
@@ -101,6 +114,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"
             integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
             crossorigin="anonymous"></script>
+    <script src="https://momentjs.com/downloads/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"></script>
     <script src="/static/js/app.js"></script>
   </body>
