--- a/templates/base.html
+++ b/templates/base.html
@@ -76,9 +76,9 @@
               <a class="dropdown-item"
                  href="/users/{{ g.user.id }}/profile">User Profile</a>
               <a class="dropdown-item"
-                 href="#">Change Password</a>
+                 href="/users/{{ g.user.id }}/changepassword">Change Password</a>
               <a class="dropdown-item"
-                 href="#">Account Settings</a>
+                 href="/users/{{ g.user.id }}/settings">Account Settings</a>
               <a class="dropdown-item"
                  href="/auth/logout">Logout</a>
             </div>
