--- a/templates/base.html
+++ b/templates/base.html
@@ -39,15 +39,19 @@
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
             <a class="nav-link"
-               href="/trades/new">New Trade <span class="sr-only">(current)</span></a>
+               href="/users/{{ g.user.id }}">Dashboard<span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link"
+               href="/trades/new">New Trade</a>
           </li>
           <li class="nav-item">
             <a class="nav-link"
                href="#">Trading History</a>
           </li>
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link"
-               href="#">Watchlists <span class="sr-only">(current)</span></a>
+               href="#">Watchlists</a>
           </li>
         </ul>
       </div>
