--- a/trades/templates/new_trade.html
+++ b/trades/templates/new_trade.html
@@ -6,12 +6,13 @@
 
 {% block content %}
   <div class="container">
-    <h3>Enter New Trade</h3>
+    <h4>Enter New Trade</h4>
     <form id="new-trade-form">
       {{ form.hidden_tag() }}
       <div class="form-group">
         {{ form.symbol.label }}
         {{ form.symbol(class_="form-control") }}
+        <span id="symbol-error" class="small text-danger d-none">Error</span>
       </div>
       <div class="form-group">
         <div>{{ form.type.label }}</div>
@@ -25,6 +26,7 @@
       <div class="form-group">
         {{ form.qty.label }}
         {{ form.qty(class_="form-control") }}
+        <span id="qty-error" class="small text-danger d-none">Error</span>
       </div>
       <button type="reset"
               class="btn btn-secondary mr-2">Reset</button>
