--- a/auth/templates/login.html
+++ b/auth/templates/login.html
@@ -9,8 +9,10 @@
     <form method="POST">
       {{ form.hidden_tag() }}
       {% for field in form if field.widget.input_type != "hidden" %}
-        {% for err in field.errors %}<span class="text-danger">{{ err }}</span>{% endfor %}
-        {{ field(placeholder=field.label.text, class="form-control form-control-lg mb-2") }}
+        <div class="form-group">
+          {{ field(placeholder=field.label.text, class="form-control form-control-lg") }}
+          {% for err in field.errors %}<small class="text-danger">{{ err }}</small>{% endfor %}
+        </div>
       {% endfor %}
       <div class="form-group text-center">
         <button class="btn btn-primary btn-lg mt-3">Login</button>
