dynamic updates of user metrics after trade exit

--- a/trades/templates/new_trade.html
+++ b/trades/templates/new_trade.html
@@ -12,7 +12,8 @@
       <div class="form-group">
         {{ form.symbol.label }}
         {{ form.symbol(class_="form-control") }}
-        <span id="symbol-error" class="small text-danger d-none">Error</span>
+        <span id="symbol-error"
+              class="small text-danger d-none">Error</span>
       </div>
       <div class="form-group">
         <div>{{ form.type.label }}</div>
@@ -26,7 +27,8 @@
       <div class="form-group">
         {{ form.qty.label }}
         {{ form.qty(class_="form-control") }}
-        <span id="qty-error" class="small text-danger d-none">Error</span>
+        <span id="qty-error"
+              class="small text-danger d-none">Error</span>
       </div>
       <button type="reset"
               class="btn btn-secondary mr-2">Reset</button>
@@ -43,3 +45,6 @@
     </p>
   </div>
 {% endblock content %}
+
+<!--JS-->
+
