--- a/templates/base.html
+++ b/templates/base.html
@@ -66,7 +66,7 @@
                href="/auth/login">Login</a>
           </li>
         {% else %}
-        <li class="nav-item">
+          <li class="nav-item">
             <a class="btn btn-success mr-4 px-3"
                href="/trades/new">New Trade</a>
           </li>
@@ -124,6 +124,7 @@
             crossorigin="anonymous"></script>
     <script src="https://momentjs.com/downloads/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"></script>
-    <script src="/static/js/app.js"></script>
+    <script src="/static/js/trade.js"></script>
+
   </body>
 </html>
