refactor variables for clarity

--- a/trades/templates/open_positions.html
+++ b/trades/templates/open_positions.html
@@ -39,7 +39,7 @@
                 <td>{{ trade.id }}</td>
                 <td>{{ trade.get_date("entry") }}</td>
                 <td class="text-center">{{ trade.symbol.upper() }}</td>
-                <td class="text-center">{{ trade.trade_type }}</td>
+                <td class="text-center">{{ trade.type }}</td>
                 <td class="text-center">{{ trade.qty }}</td>
                 <td class="text-center">{{ trade.entry_price }}</td>
                 <td class="text-center">{{ trade.latest_price }}</td>
