--- a/users/templates/dashboard.html
+++ b/users/templates/dashboard.html
@@ -90,7 +90,7 @@
                 <td>{{ trade.get_date("entry") }}</td>
                 <td class="text-center">{{ trade.symbol.upper() }}</td>
                 <td class="text-center">
-                  {{ trade.trade_type }}
+                  {{ trade.type }}
                 </td>
                 <td class="text-center">
                   {{ trade.qty }}
@@ -173,7 +173,7 @@
                   {{ trade.symbol.upper() }}
                 </td>
                 <td class="text-center">
-                  {{ trade.trade_type }}
+                  {{ trade.type }}
                 </td>
                 <td class="text-center">
                   {{ trade.qty }}
