Revert "refactor variables for clarity"
This reverts commit 8186759788acccdf3e39c9b1c5473faba1c5ed36.

--- a/users/templates/dashboard.html
+++ b/users/templates/dashboard.html
@@ -90,7 +90,7 @@
                 <td>{{ trade.get_date("entry") }}</td>
                 <td class="text-center">{{ trade.symbol.upper() }}</td>
                 <td class="text-center">
-                  {{ trade.type }}
+                  {{ trade.trade_type }}
                 </td>
                 <td class="text-center">
                   {{ trade.qty }}
@@ -173,7 +173,7 @@
                   {{ trade.symbol.upper() }}
                 </td>
                 <td class="text-center">
-                  {{ trade.type }}
+                  {{ trade.trade_type }}
                 </td>
                 <td class="text-center">
                   {{ trade.qty }}
