update open and closed trade process

--- a/templates/base.html
+++ b/templates/base.html
@@ -43,7 +43,7 @@
           </li>
           <li class="nav-item">
             <a class="nav-link"
-               href="/trades/open">Open Positions</a>
+               href="/trades/open">Open Trades</a>
           </li>
           <li class="nav-item">
             <a class="nav-link"
@@ -125,6 +125,5 @@
     <script src="https://momentjs.com/downloads/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"></script>
     <script src="/static/js/trade.js"></script>
-
   </body>
 </html>
