fixed alert after trade close

--- a/templates/base.html
+++ b/templates/base.html
@@ -125,5 +125,9 @@
     <script src="https://momentjs.com/downloads/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"></script>
     <script src="/static/js/trade.js"></script>
+
+    {% block scripts %}
+    {% endblock scripts %}
+
   </body>
 </html>
