updated js file names and locations

--- a/trades/templates/new_trade.html
+++ b/trades/templates/new_trade.html
@@ -42,3 +42,6 @@
 {% endblock content %}
 
 <!--JS-->
+{% block scripts %}
+  <script src="{{url_for('.static', filename='new_trade.js')}}"></script>
+{% endblock scripts %}
