--- a/trades/templates/trade_details.html
+++ b/trades/templates/trade_details.html
@@ -87,5 +87,5 @@
 {% endblock content %}
 
 {% block scripts %}
-  <script src="{{url_for('.static', filename='trade_exit.js')}}"></script>
+  <script src="{{url_for('.static', filename='close_trade.js')}}"></script>
 {% endblock scripts %}
